--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@ src="/images/student/s2.jpg"              alt="Student"
 
     <!-- Placement Stats -->
    <div class="placement-stats">
-  <h1 class="placement-heading">Our Placements</h1>
+  <h1 class="placement-heading">OUR PLACEMENTS</h1>
   <p class="placement-p">Last 5 Years</p>
 
   <section class="stats-section">
     <div class="stat-box">
-      <p class="counter lpa" data-target="120000">0</p>
+      <p class="counter lpa" data-target="110000">0</p>
       <h2>Highest Placement <span class="unit"></span></h2>
     </div>
     <div class="stat-box">
@@ -271,7 +271,7 @@ src="/images/student/s2.jpg"              alt="Student"
          <section id="about-section" class="content-section">
            <div class="container">
              <div class="main-content">
-               <h1>About</h1>
+               <!-- <h1>About</h1> -->
                <div class="write-up"></div>
                <div class="placement-section">
                  <p>
@@ -378,7 +378,7 @@ src="/images/student/s2.jpg"              alt="Student"
     <section id="placement-cell" class="content-section">
       <div class="container">
         <div class="main-content">
-          <h1>Placement Cell</h1>
+          <!-- <h1>Placement Cell</h1> -->
           <div class="write-up"></div>
           <div class="table-section">
           <h3 style="font-size: 30px;
@@ -393,7 +393,7 @@ src="/images/student/s2.jpg"              alt="Student"
         <th></th>
         <th>NAME</th>
         <th>DESIGNATION</th>
-        <th>Phone no.</th>
+        <!-- <th>Phone no.</th> -->
       </tr>
     </thead>
     <tbody>
@@ -401,31 +401,31 @@ src="/images/student/s2.jpg"              alt="Student"
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Dr. Seema Wadhawan</td>
         <td>Associate Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Dr. Simran Jain</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Ms. Tanishka Gupta</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Ms. Kritika Pallvi</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Ms. Tanya Chatwal</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
     </tbody>
   </table>
@@ -438,7 +438,7 @@ src="/images/student/s2.jpg"              alt="Student"
         <th></th>
         <th>NAME</th>
         <th>DESIGNATION</th>
-        <th>Phone no.</th>
+        <!-- <th>Phone no.</th> -->
       </tr>
     </thead>
     <tbody>
@@ -446,13 +446,13 @@ src="/images/student/s2.jpg"              alt="Student"
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Dr. Abhishek Gupta</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Mr. Rahul V. Anand</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
     </tbody>
   </table>
@@ -465,7 +465,7 @@ src="/images/student/s2.jpg"              alt="Student"
         <th></th>
         <th>NAME</th>
         <th>DESIGNATION</th>
-        <th>Phone no.</th>
+        <!-- <th>Phone no.</th> -->
       </tr>
     </thead>
     <tbody>
@@ -473,37 +473,17 @@ src="/images/student/s2.jpg"              alt="Student"
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Ms. Vandana Yadav</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
       <tr>
         <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
         <td>Mr. Manan Chopra</td>
         <td>Assistant Professor</td>
-        <td>-</td>
+        <!-- <td>-</td> -->
       </tr>
     </tbody>
   </table>
 
-  <!-- OTHER FACULTY -->
-  <h3 class="highlight-red">Other Faculty</h3>
-  <table class="custom-table">
-    <thead>
-      <tr>
-        <th></th>
-        <th>NAME</th>
-        <th>DESIGNATION</th>
-        <th>Phone no.</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><img src="https://cdn-icons-png.flaticon.com/512/32/32177.png" width="16" /></td>
-        <td>Ms. Mansi Srivastava</td>
-        <td>Placement Management</td>
-        <td>-</td>
-      </tr>
-    </tbody>
-  </table>
 
   <!-- STUDENT MEMBERS REMAIN SAME -->
   <h3 style="font-size: 30px;
@@ -556,7 +536,7 @@ src="/images/student/s2.jpg"              alt="Student"
      <section id="our-recruiters" class="content-section">   
     <div class="container">
       <div class="main-content">
-        <h1>Top <span>recruiters</span></h1>
+        <!-- <h1>Top <span>recruiters</span></h1> -->
         <div class="rec-empty-box" id="recruiters-logos">
         </div>
       </div>
@@ -567,7 +547,7 @@ src="/images/student/s2.jpg"              alt="Student"
   <section id="internships" class="content-section">
     <div class="container">
       <div class="main-content">
-        <h1>Intern<span>ship</span></h1>
+        <!-- <h1>Intern<span>ship</span></h1> -->
         <div class="intern-empty-box" id="internship-logos">
         </div>
       </div>
@@ -579,7 +559,7 @@ src="/images/student/s2.jpg"              alt="Student"
       <div class="container">
         <div class="main-content">
           <div class="industry-header">
-            <h1>Industry<span> Connect</span></h1>
+            <!-- <h1>Industry<span> Connect</span></h1> -->
               <a href="https://www.jimsd.org/gallery.php" target="_blank">More info</a>
           </div>
           <div class="internship-grid">
@@ -622,70 +602,6 @@ src="/images/student/s2.jpg"              alt="Student"
       </div>
     </section>
 
-  <!-- Placement records -->
-  <section class="content-section" id="placement-records">
-  <div class="container">
-    <div class="main-content">
-      <h1 class="record">Placement Records</h1>
-      <div class="accordion">
-        <!-- 2023-24 -->
-        <div class="accordion-item">
-          <div class="accordion-header">Academic Year 2023-24</div>
-          <div class="accordion-content">
-            <table>
-              <thead>
-                <tr>
-                  <th>DEPARTMENT</th>
-                  <th>ACADEMIC YEAR</th>
-                  <th>DOWNLOADS</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>BCA</td>
-                  <td>2023-24</td>
-                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
-                </tr>
-                <tr>
-                  <td>BBA</td>
-                  <td>2023-24</td>
-                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
-                </tr>
-                <tr>
-                  <td>BA(JMC)</td>
-                  <td>2023-24</td>
-                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <!-- Additional Years -->
-        <div class="accordion-item">
-          <div class="accordion-header">Academic Year 2022-23</div>
-          <div class="accordion-content">
-            <p>Data for 2022-23 goes here...</p>
-          </div>
-        </div>
-
-        <div class="accordion-item">
-          <div class="accordion-header">Academic Year 2021-22</div>
-          <div class="accordion-content">
-            <p>Data for 2021-22 goes here...</p>
-          </div>
-        </div>
-
-        <div class="accordion-item">
-          <div class="accordion-header">Academic Year 2020-21</div>
-          <div class="accordion-content">
-            <p>Data for 2020-21 goes here...</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
   <!-- Navbar -->
   <nav class="sidebar">
@@ -714,14 +630,15 @@ src="/images/student/s2.jpg"              alt="Student"
   </div>
 
   <!-- corporate speak -->
-   
- 
+   <div class="corporate-speak" style="width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; margin: 20px 0;">
+    <h1 style="font-size: 2.5rem; font-weight: bold; color: #1a1c78; ">CORPORATE SPEAK</h1>
+      <iframe src="carousel.html" width="620" height="500" style="border: none;" frameborder="0"></iframe>
+    </div>
 
   <!-- ALL SCRIPTS -->
     <script src="script/script.js"></script>
     <script src="script/recruiter.js"></script>
     <script src="script/intern.js"></script>
-    <script src="script/carousel.js"></script>
     <script>
       const leftArrow = document.querySelector(".arrow.left");
       const rightArrow = document.querySelector(".arrow.right");
@@ -836,3 +753,67 @@ src="/images/student/s2.jpg"              alt="Student"
 
   </body>
 </html>
+
+
+<!--
+<section class="content-section" id="placement-records">
+  <div class="container">
+    <div class="main-content">
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-header">Academic Year 2023-24</div>
+          <div class="accordion-content">
+            <table>
+              <thead>
+                <tr>
+                  <th>DEPARTMENT</th>
+                  <th>ACADEMIC YEAR</th>
+                  <th>DOWNLOADS</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>BCA</td>
+                  <td>2023-24</td>
+                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
+                </tr>
+                <tr>
+                  <td>BBA</td>
+                  <td>2023-24</td>
+                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
+                </tr>
+                <tr>
+                  <td>BA(JMC)</td>
+                  <td>2023-24</td>
+                  <td><a href="#"><img class="pdf-icon" src="https://cdn-icons-png.flaticon.com/512/337/337946.png" alt="PDF" /></a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <div class="accordion-header">Academic Year 2022-23</div>
+          <div class="accordion-content">
+            <p>Data for 2022-23 goes here...</p>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <div class="accordion-header">Academic Year 2021-22</div>
+          <div class="accordion-content">
+            <p>Data for 2021-22 goes here...</p>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <div class="accordion-header">Academic Year 2020-21</div>
+          <div class="accordion-content">
+            <p>Data for 2020-21 goes here...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+-->
